tests/error/poly_errors_py312/repeat_generic.err
Error: Generic parameters already specified (at $FILE:17:18)
   | 
15 | 
16 | @guppy.struct
17 | class MyStruct[S](Generic[T]):
   |                   ^^^^^^^^^^ Duplicate specification of generic parameters
   | 
17 | class MyStruct[S](Generic[T]):
   |                - Parameters of `MyStruct` are already specified here

Guppy compilation failed due to 1 previous error
